# eva-mcp-server

./: .editorconfig  .env.example  .gitattributes  .gitignore  API_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_SETUP.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  PUBLISH_INSTRUCTIONS.md  PUBLISH_TO_GITHUB.md  QUICK_START.md  README.md  SETUP_CURSOR.md  cursor_config.json  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  README.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  publish.yml
src/: __init__.py  eva_client.py  server.py  tools.py
tests/: __init__.py  test_eva_client.py  test_tools.py
