[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva-mcp-server"
version = "0.1.0"
description = "MCP server for Eva-project API integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Konstantin Rerikh", email = "knrerikh@gmail.com"}
]
keywords = ["mcp", "eva", "eva-project", "api", "cursor", "claude", "ai-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/knrerikh/eva-mcp-server"
Documentation = "https://github.com/knrerikh/eva-mcp-server#readme"
Repository = "https://github.com/knrerikh/eva-mcp-server"
Issues = "https://github.com/knrerikh/eva-mcp-server/issues"
Changelog = "https://github.com/knrerikh/eva-mcp-server/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[project.scripts]
eva-mcp-server = "eva_mcp_server.server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

